# AI-TRAVEL-PLANNER

./: .dockerignore  .env  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  trigger.txt
.github/workflows/: ci.yml
auth/: firebase_auth.py
backend/: main.py
backend/Schema/: sample_places.py
backend/db/: models.py  mongodb.py
backend/langgraph_agents/: itinerary_agent.py  rag_agent.py
backend/llm/: ollama_llm.py
backend/modules/: translate.py
backend/routes/: auth.py  budget.py  itinerary.py  rag_chat.py  search.py  translate.py  upload_places.py
backend/search/: embedder.py  weav_client_ops.py
backend/utils/: logger.py  qdrant_utils.py  schema.py
docker/: Dockerfile
frontend/: Dockerfile  app.py  requirements.txt
